# net_shop

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  manage.py  pyproject.toml  pytest.ini
.github/workflows/: action.yaml
net_shop/: asgi.py  settings.py  urls.py  wsgi.py
seller/: admin.py  apps.py  models.py  permissions.py  serializers.py  tools.py  urls.py  validators.py  views.py
seller/migrations/: 0001_initial.py  0002_alter_seller_options_remove_product_seller_and_more.py  0002_alter_seller_options_seller_level.py  0003_alter_seller_building_alter_seller_city_and_more.py  0003_alter_seller_provider.py
tests/: conftest.py  factories.py  utils.py
tests/seller/: test_seller_create.py  test_seller_delete.py  test_seller_list.py  test_seller_retrieve.py  test_seller_update.py
